# coberus

./: .gitignore  README.md  coadder.py  coadder_futures.py  plot_map.py  pseudo.py  pyproject.toml  requirements.txt  simple_dask.py
.github/workflows/: test.yml
coberus/: __init__.py  cli.py  core.py  covariance.py  fits.py  parse.py  pipeline.py  pipeline_split.py  wavelets.py
scripts/: basis.py  build_ivar.py  data.yaml  paths.yaml  plot.py  prototype.py  prototype_prepare.py  quick_test.py  sim.py  test_data_preprocess.py  utils.py  verify.py
tests/: test_pipeline.py
