[build-system]
requires = ["setuptools>=64.0.0"]

[tool.setuptools.packages.find]
exclude=["*scripts*"]

[project]
name="coberus"
requires-python = ">=3.10"
version = "0.0.1"
dependencies = [
    "pydantic",
    "numba",
    "numpy",
    "astropy",
    "dask[complete]",
    "pixell>=0.26.2",
    "pydantic-yaml",
]
authors = [
    {name = "Josh Borrow"},
    {name = "Mathew Madhavacheril"},
]
maintainers = [
    {name = "Josh Borrow", email = "borrowj@sas.upenn.edu"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
description="A library for co-adding astronomical maps with fixed pixelisation together."

[project.scripts]
coberus = "coberus.cli:main"
coberus-wavelet = "coberus.parse:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "uv"
]

[project.urls]
Homepage = "https://github.com/simonsobs/map-coaddition/"
